--- a/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/MainPage.xaml
+++ b/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/MainPage.xaml
@@ -14,15 +14,7 @@
     shell:SystemTray.IsVisible="False">
 
     <Grid x:Name="LayoutRoot" Background="Transparent">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-
-        <!--LayoutRoot is the root grid where all page content is placed-->
-        <DrawingSurfaceBackgroundGrid x:Name="DrawingSurfaceBackground" Loaded="DrawingSurfaceBackground_Loaded" Grid.Row="1"/>
-
+        <DrawingSurface x:Name="DrawingSurface" Loaded="DrawingSurfaceBackground_Loaded" />
     </Grid>
 
 </phone:PhoneApplicationPage>
