fixed keyboard shift, but its being shifted twice, once by the DrawingSurface, once by TotalCross. will try to cache the sip height value

--- a/TotalCrossVM/src/dx/cs/App.xaml
+++ b/TotalCrossVM/src/dx/cs/App.xaml
@@ -1,4 +1,4 @@
-<Application
+﻿<Application
     x:Class="PhoneDirect3DXamlAppInterop.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -13,7 +13,7 @@
     <Application.ApplicationLifetimeObjects>
         <!--Required object that handles lifetime events for the application-->
         <shell:PhoneApplicationService
-            Launching="Application_Launching" Closing="Application_Closing"
+            Closing="Application_Closing"
             Activated="Application_Activated" Deactivated="Application_Deactivated"/>
     </Application.ApplicationLifetimeObjects>
 
