--- a/TotalCrossVM/builders/droid/src/main/res/values/arrays.xml
+++ b/TotalCrossVM/builders/droid/src/main/res/values/arrays.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<resources>
-  <string-array name="country_codes">
+<!--
+ Copyright (C) 2008 ZXing authors
+
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+ -->
+<resources xmlns:tools="http://schemas.android.com/tools">
+  <string-array name="country_codes" tools:ignore="MissingTranslation">
     <item>-</item>
     <item>AR</item>
     <item>AU</item>
     <item>BR</item>
     <item>BG</item>
     <item>CA</item>
+    <item>CH</item>
     <item>CN</item>
     <item>CZ</item>
     <item>DE</item>
@@ -24,6 +40,7 @@
     <item>NL</item>
     <item>PL</item>
     <item>PT</item>
+    <item>RO</item>    
     <item>RU</item>
     <item>SE</item>
     <item>SK</item>
@@ -31,5 +48,15 @@
     <item>TR</item>
     <item>TW</item>
     <item>US</item>
+  </string-array>
+  <string-array name="preferences_front_light_values" tools:ignore="MissingTranslation">
+    <item>ON</item>
+    <item>AUTO</item>
+    <item>OFF</item>
+  </string-array>
+  <string-array name="preferences_front_light_options">
+    <item>@string/preferences_front_light_on</item>
+    <item>@string/preferences_front_light_auto</item>
+    <item>@string/preferences_front_light_off</item>
   </string-array>
 </resources>
